# yt-transcripts-direct-from-yt

./: Pasted--Serving-Flask-app-main-Debug-mode-on-INFO-werkzeug-WARNING-This-is-a-development-server-D-1733963631644.txt  Pasted-024-12-11-18-16-23-47-bc9df4d3-System-forwarding-local-port-5000-to-external-port-80-2024-12-11-18-1-1733962702685.txt  Pasted-024-12-11-18-52-22-26-9f3c4bb3-User-INFO-werkzeug-Press-CTRL-C-to-quit-2024-12-11-18-52-22-26-9f3c4b-1733964842637.txt  Pasted-2024-12-11-18-16-33-67-bc9df4d3-User-INFO-werkzeug-127-0-0-1-12-Dec-2024-00-16-33-GET-HTTP--1733964268196.txt  Pasted-2024-12-11-18-48-47-36-604fa949-User-WARNING-werkzeug-Debugger-is-active-2024-12-11-18-48-47-37--1733964597484.txt  Pasted-INFO-werkzeug-WARNING-This-is-a-development-server-Do-not-use-it-in-a-production-deployment-Use-a-1733963920932.txt  README.md  main.py  pyproject.toml  utils.py
agent_assets/: docs_venice_ai_api-reference_api-spec.md  docs_venice_ai_api-reference_endpoint_chat_completions.md  youtube_com_watch.md
static/css/: style.css
static/js/: main.js
templates/: index.html
