[project]
name = "repl-nix-new-repl"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "email-validator>=2.2.0",
    "flask-sqlalchemy>=3.1.1",
    "flask>=3.1.0",
    "psycopg2-binary",
    "requests>=2.9.10",
    "trafilatura>=2.0.0",
]
